# piscinePython

./: .gitignore  README.md
python_00/ex00/: Hello.py
python_00/ex01/: format_ft_time.py
python_00/ex02/: find_ft_type.py  tester.py
python_00/ex03/: NULL_not_found.py  tester.py
python_00/ex04/: whatis.py
python_00/ex05/: building.py
python_00/ex06/: filterstring.py  ft_filter.py  tester.py
python_00/ex07/: sos.py
python_00/ex08/: Loading.py  tester.py
python_00/ex09/: README.md  pyproject.toml  setup.py
python_00/ex09/src/ft_package/: __init__.py  ft_package.py
python_00/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
python_01/ex00/: give_bmi.py
python_01/ex01/: array2D.py
python_01/ex02/: load_image.py
python_01/ex03/: load_image.py  zoom.py
python_01/ex04/: load_image.py  rotate.py
python_01/ex05/: load_image.py  pimp_image.py
python_02/ex00/: corrupted.csv  load_csv.py
python_02/ex01/: aff_life.py
python_02/ex02/: aff_pop.py  load_csv.py
python_02/ex03/: load_csv.py  projection_life.py
python_03/ex00/: S1E9.py
python_03/ex01/: S1E7.py  S1E9.py
python_03/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
python_03/ex03/: ft_calculator.py
python_03/ex04/: ft_calculator.py
python_04/ex00/: statistics.py
python_04/ex01/: in_out.py
python_04/ex02/: callLimit.py
python_04/ex03/: new_student.py
